Fix searchbar scrollbars

--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -9,6 +9,7 @@
   border-radius: 60px;
   width: 100%;
   transition: all 1s ease-out;
+  overflow: hidden;
     input {
     all: unset;
     background: none;
